# MIPS_CPU

./: README.md
cpu/: README.md  test_cpu.py
cpu/cpu/: 00.cpu_.v  01.if_.v  01a.InstructionRAM.v  02.reg_if_id_.v  03.id_.v  03a.instruction_docoder_.v  03b.control_unit_.v  03c.registers_.v  04.reg_id_ex_.v  05.ex_.v  05a.alu_.v  06.reg_ex_mem_.v  07.mem_.v  07a.MainMemory.v  08.reg_mem_wb_.v  Makefile  X1.mux4_32_.v  X2.bubble_inserter_.v  X3.forwarding_unit_.v  test_cpu.out  test_cpu.v  test_cpu.vcd
cpu/cpu_test/: mips3.asm  mips6.asm  mips7.asm  mips8.asm
mips_assembler/: CMakeLists.txt  README.md
mips_assembler/include/: dic.h  mips_funct.h  scanner.h  simulator.h  utils.h
mips_assembler/src/: main.cpp  scanner.cpp  simulator.cpp  utils.cpp
mips_assembler/test/: memcpy-hello-world.asm
